[package]
name = "sysinfo_dot_h"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A tiny sys/sysinfo.h wrapper"
readme = "README.md"
repository = "https://github.com/WilliamAnimate/sysinfo_dot_h"
categories = ["os::linux-apis", "api-bindings"]
keywords = ["sysinfo", "linux", "FFI"]
